_2009_01_26__12_06_20_ Chris Morley -- Version merged from v278-279 in branch FlattenedMolecule

Some formatting of XSL files.

_2009_01_26__12_01_50_ Chris Morley -- Version merged from v278-279 in branch FlattenedMolecule

Display (reverse) for reverse ILT

_2009_01_26__11_59_00_ Chris Morley -- Version merged from v277-278 in branch FlattenedMolecule

Shows activation barrier from reverse ILT

_2009_01_26__11_53_26_ Chi-Hsiu Liang -- Version merged from v276-277 in branch FlattenedMolecule

A tagged version that flattens class Molecule 

2008-12-16 Chris Morley

  * Added project title: XML tag, member variable in System, displayed when
    XML transformed by mesmer1.xsl.
    Add a title to XML files in MesmerQA.
    
  * Output Bartis-Widom rates to XML file in a new section <analysis>
    Update mesmer1/xsl to display this section and with other cosmetic changes.
    
  * Update mesmerdiag.xsl to show activation energy barriers, and handle
    reactions with no product energy.
    
  * Corrected some memory leaks by deleting reactions in the ReactionManager
    destructor. This showed up incorrect deletion of m_sourcemap (not assigned
    by new) in AssociatioReaction and IrreversibleExhangeReaction.
    
  * Added licence text at the top of main.cpp. This will need to be in every file.
  
  * Trivial numerical differences in Acetyl O2 association QA test, which I don't
    think I caused. Assuming ok, but needs updating.     

_2008_12_14__16_26_45_ Chi-Hsiu Liang

  * Added a punch file option with grid search. 
    Syntax:     <me:gridSearchWithPunch />
  * Updated manual.

_2008_12_10__11_41_02_ Chi-Hsiu Liang

  * Updated Manaul: Firefox usage, compression of release, deltaEdown syntax, etc.

_2008_12_03__12_16_02_ Chi-Hsiu Liang

  * Corrected a forgotten plugin class object compilation in Makefile

2008-12-2 David Glowacki

   * Updated some comments in the code

_2008_12_02__11_36_08_ Chi-Hsiu Liang

  * Changed manaul auto-formatting on Normal style
