@@ -1,4 +1,8 @@
-_2009_01_26__12_06_20_ Chris Morley -- Version merged from v278-279 in branch FlattenedMolecule
+_2009_01_26__12_09_11_ Chi-Hsiu Liang -- Version merged from v280-281 in branch FlattenedMolecule
+
+Checked in for a a prepared routine in matrix multiplication. (not tested)
+
+_2009_01_26__12_06_20_ Chris Morley -- Version merged from v279-280 in branch FlattenedMolecule
 
 Some formatting of XSL files.
 
